--- a/extras/process.html
+++ b/extras/process.html
@@ -18,12 +18,12 @@
 				<h1><strong><a href="https://girlswhocode.com/">Girls Who Code</a></strong></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="homepage.html">Home</a></li>
-						<li><a href="essay.html">Essay</a></li>
-						<li><a href="actsat.html">SAT/ACT</a></li>
-						<li><a href="process.html">Application Process</a></li>
-						<li><a href="finance.html">Financial Aid</a></li>
-						<li><a href="checklist.html">Checklist</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="generic.html">Essay</a></li>
+						<li><a href="elements.html">SAT/ACT</a></li>
+						<li><a href="elements.html">Application Process</a></li>
+						<li><a href="elements.html">Financial Aid</a></li>
+						<li><a href="elements.html">Checklist</a></li>
 
 					</ul>
 				</nav>
@@ -39,12 +39,17 @@
 						<h2>Application Process</h2>
 						<p>Applying to college is comprised of many steps and requires planning ahead. Here you will find FAQs to help you understand and get ahead of the process.</p>
 					</header><a href="#" class="image fit"><img src="books.jpg" alt="" /></a>
+					<style>
+					div.a {
+    				text-indent: 50px;
+					}
+					</style>
 					<font size="4">
 					<p1><b>What does the typical application look like?</b></p1>
 	        <br><p2>Every college has different requirements, but most ask for the same basic elements: either an ACT or SAT score report, an essay, a high school transcript, letters of reccomendation (from a teacher and/or counselor), and an application fee.</p2>
 	        <br><br><p20><b>Here is a brief explanation of each of the elements (some are explained in other tabs):</b></p20><br>
 	        <br><p21><b>High School Transcript:</b></p21><br>
-	        <p22>A record of a student's classes and grades to show how the student challenged themself and performed in their classes. This includes the student's GPA (grade point average), which measures all the grades a student has earned during their academic career.</p22>
+	        <p22>A record of a student's classes and grades to show how the student challenged themself and performed in their classes. This includes the student's GPA (grade point average), which measures all the grades a student has earned during their academic career. (Also, remember that GPA calculation systems will vary among high schools, so some colleges will recalculate them with their own system)</p22>
 	        <br><br><p23><b>Letters of Recommendation:</b></23><br>
 	        <p24>A letter written by an adult such as a teacher or advisor who can vouch for a student's work, personality, and performance. </p24>
 	        <br><br><p25><b>Application Fee:</b></p25><br>
@@ -62,10 +67,18 @@
 					<hr><a href="#" class="image fit"><img src="pens.jpg" alt="" /></a>
 					<p27><b>How to ask for a recommendation letter:</b></p27>
 	        <br><p28>1. Choose someone who knows you well and will give you a strong recommendation (not a generic one), such as a teacher, counselor, employer, advisor, or mentor.</p28>
-					<br><p33>			-Check each college's requirements. Some want letters only from specific subject teachers or from counselors.</p33>
-	        <br><p29>2. Always ask AHEAD OF TIME. Do not ask the night before or the day a recommendation is due. Approach whoever you need to write a letter in advance to ask them if they have the time and are willing to write a letter for you in the future.</p29>
-	        <br><p31>4. Prepare what you will say ahead of time (why you asked that specific teacher/counselor, what the letter is for, etc...)</p31>
-	        <br><p32>5. Give the teacher information about yourself (like your activites, passions, and what you want to pursue).</p32>
+					<br><p33><div class="a">-Check each college's requirements. Some might only want letters from specific subject teachers or from counselors.</div></p33>
+					<p34><div class="a">-Choose someone who you have known for a while or has worked with you recently.</div></p34>
+					<p29>2. Always ask AHEAD OF TIME. Do not ask the night before or the day a recommendation is due. Approach whoever you need to write a letter in advance to ask them if they have the time and are willing to write a letter for you in the future.</p29>
+					<br><p31>3. Prepare what you will say ahead of time.</p31>
+					<p36><div class="a">-Explain why you asked that specific person, what the letter is for, etc..</div></p36>
+					<p32>4. Give your reference information about yourself.</p32>
+					<br><p35><div class="a">-Remind them about the work you've done, the challenges you've overcome, your accomplishments, hobbies, and plans for the future.</div></p35>
+					<p37><b>Final Tips:</b></p37>
+					<p38><div class="a">-Waive your right to view recommendation letters since admission officers will trust them more.</div></p38>
+					<p39><div class="a">-Make sure your references know the deadline.</div></p39>
+					<p40><div class="a">-Follow up on your references about a week before a letter is due.</div></p40>
+					<p41><div class="a">-Write thank-you notes for your references and let them know how much you appreciated them.</div></p41>
 					<hr><a href="#" class="image fit"><img src="teble.jpg" alt="" /></a>
 					<p13><b>Do colleges want my AP test scores?</b></p13>
 					<br><p14>Reporting AP scores is not a requirement and far from one of the most factor of the application process. However, students who are applying to selective schools or want college credit should report their scores. (But remember that every college has different standards when it comes to accepting AP credits, which is something students can check on a college's website)<p14>
@@ -73,16 +86,19 @@
 				</div>
 			</section>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="container">
-						<ul class="icons">
-							<li><a href="https://www.facebook.com/GirlsWhoCode/" class="icon fa-facebook"></a></li>
-							<li><a href="https://twitter.com/GirlsWhoCode?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="icon fa-twitter"></a></li>
-							<li><a href="https://www.instagram.com/girlswhocode/?hl=en" class="icon fa-instagram"></a></li>
-						</ul>
-					</div>
-				</footer>
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="#" class="icon fa-facebook"></a></li>
+						<li><a href="#" class="icon fa-twitter"></a></li>
+						<li><a href="#" class="icon fa-instagram"></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; GWC</li>
+					</ul>
+				</div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
