--- a/actsat.html
+++ b/actsat.html
@@ -21,7 +21,7 @@
 				<h1><strong><a href="https://girlswhocode.com/">Girls Who Code</a></strong></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="homepage.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="essay.html">Essay</a></li>
 						<li><a href="actsat.html">SAT/ACT</a></li>
 						<li><a href="process.html">Application Process</a></li>
