--- a/finance.html
+++ b/finance.html
@@ -18,7 +18,7 @@
 				<h1><strong><a href="https://girlswhocode.com/">Girls Who Code</h1></strong>
 				<nav id="nav">
 					<ul>
-						<li><a href="homepage.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="essay.html">Essay</a></li>
 						<li><a href="actsat.html">SAT/ACT</a></li>
 						<li><a href="process.html">Application Process</a></li>
